# mcpTerm

./: README.md  logs.json  main.py  pyproject.toml
convos/: user_convo2025-06-05_13-24-22.json  user_convo2025-06-05_14-54-12.json  user_convo2025-06-05_14-56-16.json  user_convo2025-06-05_15-03-42.json  user_convo2025-06-05_15-11-24.json  user_convo2025-06-05_15-12-28.json  user_convo2025-07-01_14-16-15.json  user_convo2025-07-01_15-04-38.json
mcp_servers/: TaskManager.py
src/: agent.py  deepseek_client.py  mcp_client.py
vector_data/: chroma.sqlite3
